--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/svg+xml" href="./icon.svg" color="#ffffff">
     <title>Notes</title>
   </head>
-  <body>
+  <body class="bg-white dark:bg-slate-900 duration-200">
     <div id="root"></div>
   </body>
 </html>
